# grpc-proxy

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml
docs/: grpc-filter-tests.md
patches/: 01-pre-upstream-body-filter-trait.patch  02-proxy-h2-hooks.patch  03-write-response-header-end-of-stream.patch  04-session-write-header-end.patch  apply.sh
pingora-vendor/pingora-core/src/protocols/http/: server.rs
pingora-vendor/pingora-proxy/src/: lib.rs  proxy_h2.rs  proxy_trait.rs
rules/: example.toml
src/: config.rs  grpc.rs  main.rs  metrics_service.rs  protobuf.rs  proxy.rs  rules.rs  validator.rs
tests/attack_tests/: Cargo.toml
tests/attack_tests/src/: main.rs
