[package]
name = "solana-grpc-proxy"
version = "0.1.0"
edition = "2021"
description = "Minimal Pingora-based gRPC proxy for Solana Yellowstone/Geyser with per-IP SubscribeRequest filtering"
license = "Apache-2.0"

# Standalone package with vendored (forked) pingora in ./pingora-vendor
[workspace]
exclude = ["pingora-vendor"]

# Use local forked pingora — adds pre_upstream_body_filter hook for
# validating request body before upstream connection is used.
[patch.crates-io]
pingora = { path = "pingora-vendor/pingora" }
pingora-core = { path = "pingora-vendor/pingora-core" }
pingora-proxy = { path = "pingora-vendor/pingora-proxy" }
pingora-error = { path = "pingora-vendor/pingora-error" }
pingora-http = { path = "pingora-vendor/pingora-http" }
pingora-limits = { path = "pingora-vendor/pingora-limits" }
pingora-timeout = { path = "pingora-vendor/pingora-timeout" }
pingora-cache = { path = "pingora-vendor/pingora-cache" }
pingora-lru = { path = "pingora-vendor/pingora-lru" }
pingora-pool = { path = "pingora-vendor/pingora-pool" }
pingora-runtime = { path = "pingora-vendor/pingora-runtime" }
pingora-header-serde = { path = "pingora-vendor/pingora-header-serde" }
pingora-load-balancing = { path = "pingora-vendor/pingora-load-balancing" }
pingora-ketama = { path = "pingora-vendor/pingora-ketama" }
pingora-openssl = { path = "pingora-vendor/pingora-openssl" }

[dependencies]
pingora = { version = "0.8.0", features = ["lb", "openssl"] }
pingora-limits = "0.8.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.9"
serde = { version = "1", features = ["derive"] }
humantime = "2"
clap = { version = "4", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.release-perf]
inherits = "release"
debug = 1
strip = "none"
opt-level = 3

