[package]
name = "solana-grpc-proxy"
version = "0.1.0"
edition = "2021"
description = "Minimal Pingora-based gRPC proxy for Solana Yellowstone/Geyser with per-IP SubscribeRequest filtering"
license = "Apache-2.0"

# Standalone package; pingora is a git submodule patched via patches/apply.sh
[workspace]
exclude = ["pingora"]

# Override crates.io pingora with our patched local submodule.
# After `git submodule update --init && ./patches/apply.sh`, these paths
# point at pingora/ with our modifications applied.
[patch.crates-io]
pingora = { path = "pingora/pingora" }
pingora-core = { path = "pingora/pingora-core" }
pingora-proxy = { path = "pingora/pingora-proxy" }
pingora-error = { path = "pingora/pingora-error" }
pingora-http = { path = "pingora/pingora-http" }
pingora-limits = { path = "pingora/pingora-limits" }
pingora-timeout = { path = "pingora/pingora-timeout" }
pingora-cache = { path = "pingora/pingora-cache" }
pingora-lru = { path = "pingora/pingora-lru" }
pingora-pool = { path = "pingora/pingora-pool" }
pingora-runtime = { path = "pingora/pingora-runtime" }
pingora-header-serde = { path = "pingora/pingora-header-serde" }
pingora-load-balancing = { path = "pingora/pingora-load-balancing" }
pingora-ketama = { path = "pingora/pingora-ketama" }
pingora-openssl = { path = "pingora/pingora-openssl" }

[dependencies]
pingora = { version = "0.8.0", features = ["lb", "openssl"] }
pingora-limits = "0.8.0"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.9"
serde = { version = "1", features = ["derive"] }
humantime = "2"
clap = { version = "4", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.release-perf]
inherits = "release"
debug = 1
strip = "none"
opt-level = 3
