[package]
name = "attack_tests"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "attack_tests"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
prost = "0.13"
futures = "0.3"
yellowstone-grpc-proto = "5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[workspace]
